# dcr

./: Cargo.toml  README.md
08/8cd0bbaae3/: metadata.json
08/8cd0bbaae3/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
08/8cd0bbaae3/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
2b/f3008465a5/: metadata.json
2b/f3008465a5/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
2b/f3008465a5/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
78/f3c1c150fe/: metadata.json
78/f3c1c150fe/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
80/334489f4ea/: metadata.json
80/334489f4ea/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
93/9410595bfd/: metadata.json
93/9410595bfd/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
d2/3bcbdcdf63/: metadata.json
d2/3bcbdcdf63/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
db/d39aeffd7b/: metadata.json
db/d39aeffd7b/0/: content_hash.txt  context.md  full.jsonl  prompt.txt  (+1 more)
e1/2e03f11e7a/: metadata.json
e2/29d9e6543e/: metadata.json
src/: app.rs  dicom.rs  lib.rs  main.rs  ui.rs  validation.rs
src/app/: input.rs  mod.rs  preview.rs  search.rs  state.rs  tree.rs
src/dicom/: datetime.rs  diff.rs  loader.rs  mod.rs  tag.rs
src/validation/: mod.rs  rules.rs  types.rs  validator.rs
tests/: app_tests.rs  datetime_tests.rs  dicom_tests.rs  diff_tests.rs  integration_tests.rs  validation_tests.rs
tests/fixtures/: not-a-dicom.txt
(+28 files in other folders)
