[package]
name = "dcr"
version = "0.1.0"
edition = "2021"
description = "DICOM TUI Viewer"

[dependencies]
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
crossterm = "0.28"
dicom = "0.8"
clap = { version = "4.5", features = ["derive"] }
similar = "2.5"
chrono = "0.4"
dicom-pixeldata = { version = "0.8", features = ["image"] }
dicom-transfer-syntax-registry = { version = "0.8", features = ["native"] }
ratatui-image = "3.0.0"
image = "0.25"
ratatui-explorer = "0.2"
